[package]
name = "runstrate"
version = "0.0.2"
description = "Fast way to test a Substrate Runtime via RPC."
authors = ["Artur Gontijo <https://github.com/arturgontijo>"]
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/arturgontijo/runstrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "runstrate"

[dependencies]
anyhow = { version = "1.0.86" }
#jsonrpsee = { version = "0.22.5", features = ["client-core", "macros", "server-core", "server"] }
jsonrpsee = { version = "0.16.2", features = ["server", "client", "macros"] }
hex = { version = "0.4.3", default-features = false }

clap = { version = "4.5.0", features = ["derive"] }
futures = { version = "0.3.30", features = ["thread-pool"] }

tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", default-features = true, features = ["derive"] }
serde_json = { version = "1.0.114", default-features = true }

codec = { package = "parity-scale-codec", version = "3.6.12", features = ["derive", "max-encoded-len"], default-features = false }
scale-info = { version = "2.10.0", features = ["derive"], default-features = false }

sp-core = { version = "29.0.0", default-features = false }
sp-io = { version = "31.0.0", default-features = false }
sp-runtime = { version = "32.0.0", default-features = false }

sp-version = { version = "30.0.0", default-features = false }
sp-api = { version = "27.0.0", default-features = false }
sp-storage = { version = "20.0.0", default-features = false }
sc-service = { version = "0.36.0", default-features = false }
sp-transaction-pool = { version = "27.0.0", default-features = false }

sp-state-machine = { version = "0.36.0", default-features = false }
sc-client-api = { version = "29.0.0", default-features = false }
sc-transaction-pool-api = { version = "29.0.0", default-features = false }
sc-executor = { version = "0.33.0", default-features = false }
sc-rpc = { version = "35.0.0", default-features = false }

frame-support = { version = "29.0.2", features = ["tuples-96"], default-features = false }
frame-system = { version = "29.0.0", default-features = false }
frame-executive = { version = "29.0.0", default-features = false }

polkadot-primitives = { version = "8.0.1", default-features = false }

## Pallets
pallet-timestamp = { version = "28.0.0", default-features = false }
pallet-transaction-payment = { version = "29.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "29.0.0", default-features = false }

# Runtime
#mock-runtime = { path = "runtime" }

solochain-template-runtime = { git = "https://github.com/paritytech/polkadot-sdk", brach = "release-polkadot-v1.12.0" }
kusama-runtime = { package = "staging-kusama-runtime", git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.2.4" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",

    "polkadot-primitives/std",

    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-api/std",

	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

#    "mock-runtime/std",

   "solochain-template-runtime/std",
#    "kitchensink-runtime/std",
#    "polkadot-runtime/std",
    "kusama-runtime/std",
#    "statemine-runtime/std",
]
