[package]
name = "mock-runtime"
version = "0.0.2"
description = "A fresh FRAME-based Substrate runtime, ready for hacking."
authors = ["Artur Gontijo <https://github.com/arturgontijo>"]
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/arturgontijo/runstrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"], default-features = false }
scale-info = { workspace = true, features = ["derive", "serde"], default-features = false }

frame-support = { workspace = true, features = ["experimental"], default-features = false }
frame-system = { workspace = true, default-features = false }
frame-executive = { workspace = true, default-features = false }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }

sp-api = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-core = { workspace = true, features = ["serde"], default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, features = ["serde"], default-features = false }
sp-version = { workspace = true, features = ["serde"], default-features = false }
sp-std = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-genesis-builder = { workspace = true, default-features = false }

# Pallets
pallet-timestamp = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }

# Local Dependencies
pallet-template = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",

	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"frame-executive/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-genesis-builder/std",

	"pallet-timestamp/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-sudo/std",
	"pallet-template/std",
]
