[package]
name = "pallet-template"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"], default-features = false }
scale-info = { workspace = true, features = ["derive"], default-features = false }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",

	"frame-support/std",
	"frame-system/std",
]
